# multipyline

./: pyproject.toml
src/multipyline/: __init__.py  multipyline_format.py
tests/: test_multipyline.py
