[project]
name = "multipyline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mojmír Majer", email = "mojmir.majer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
